EB-2002-03-21-1  Enhancem.: sort output of qconf -sep

CR-2002-03-21-2  Bugfix:    changed error messages when master commd is not
                            reachable.

CR-2002-03-21-1  Bugfix:    removed forgotten #if0 - #endif statement which
                            chauses scheduler to abort() on testsuite's 
                            path_alias check.

JG-2002-03-21-0  Bugfix:    prioritization of messages to qmaster could block
                            reports from execd's to qmaster and make the system
                            unusable.
                            Set "no prioritization" as default, behaviour can
                            be changed via env variable SGE_PRIORITY_TAGS.

EB-2002-03-21-0  Bugfix:    local config not written as admin user at startup
                 Issue:     #198

CR-2002-03-21-0  Testsuite: merge from maintrunc
                            sending "vt100" when client host is using tset
                            for terminal settings.

AA-2002-03-20-0  Bugfix:    qhost formatting

EB-2002-03-20-1  Bugfix:    can't receive request: READ ERROR
                            - replaced closeconnection(0) calls within 
                              recvfromcommd() through closeconnection(1) calls 
                              in case of read error
                            - improved logging; additional messages may be 
                              found in the messages files of the daemons which 
                              might help if these errors occure again
                 Issue:     #176 (partially)

EB-2002-03-20-0  Cleanup:   removed global variable monitor_next_run

JG-2002-03-20-1  Bugfix:    Check return code of fclose in spooling functions
                            and handle error situations:
                            - log critical error
                            - remove file
                 Issue:     #185

CR-2002-03-20-0  Bugfix:    qselect/qstat -U is (partially) broken